tests/error/syntax/missing-fn.rd
// test: File should not compile with syntax error
// stderr: = error[E0001]: 4:5-7: syntax error, unexpected identifier, expecting `fn` or `static`\n

pub foo() { }

